--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -14,7 +14,7 @@
   },
   "about_me":{
     "about_me": "About Me",
-    "des": "I am a researcher focusing on medical imaging, pattern recognition, and machine learning. I strive for open source and open data."
+    "des": "As a researcher, I have experience participating in various artificial intelligence projects. At the same time, I am pursuing a master's degree in Urban Big Data Convergence. I plan to complete my master's degree in 2025. Currently, I am expanding my research into VLLM."
   },
   "skills":{
     "my_skills": "My Skills"
